--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -1,9 +1,6 @@
 <div class="settings__content">
   <h3 class="title settings__content-title">{{'Change password' | translate}}</h3>
 
-  <!--TODO please style this-->
-  <h4> {{ statusMessage }}</h4>
-
   <form class="settings-form" [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="settings__form-row">
       <div class="wrap-input wrap-input--fix230"
@@ -13,6 +10,7 @@
           class="wrap-input__input"
           [type]="isPasswordCurrVisible ? 'text' : 'password'"
           formControlName="current_password"
+          autocomplete="false"
           required
         >
         <label class="wrap-input__label">{{'Current password' | translate}}</label>
@@ -32,26 +30,20 @@
           </span>
           <span
             class="wrap-input__message"
-            *ngIf="currentPassword.errors['minlength']"
+            *ngIf="currentPassword.errors['wrong_password']"
           >
-            {{'Password must contain at least 8 characters.' | translate}}
+            {{'Wrong password.' | translate}}
           </span>
-          <span
+          <!-- <span
             class="wrap-input__message"
-            *ngIf="currentPassword.errors['maxlength']"
-          >
-            {{'Password cannot be more than 40 characters long.' | translate}}
-          </span>
-          <span
-            class="wrap-input__message"
-            *ngIf="currentPassword.errors['passwordValidation'] &&
-                  !(currentPassword.errors['minlength'] ||
-                    currentPassword.errors['required'] ||
-                    currentPassword.errors['maxlength'])"
+            *ngIf="currentPassword.errors['passwordValidation'] ||
+                  currentPassword.errors['minlength'] ||
+                  currentPassword.errors['required'] ||
+                  currentPassword.errors['maxlength']"
           >
             {{('Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z),' +
                 ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
-          </span>
+          </span> -->
         </ng-container>
         <!--Input error section ends-->
       </div>
@@ -65,6 +57,7 @@
           class="wrap-input__input"
           [type]="isPassword1Visible ? 'text' : 'password'"
           formControlName="password_1"
+          autocomplete="false"
           required
         >
         <label class="wrap-input__label">{{'New password' | translate}}</label>
@@ -84,22 +77,10 @@
           </span>
           <span
             class="wrap-input__message"
-            *ngIf="firstPassword.errors['minlength']"
-          >
-            {{'Password must contain at least 8 characters.' | translate}}
-          </span>
-          <span
-            class="wrap-input__message"
-            *ngIf="firstPassword.errors['maxlength']"
-          >
-            {{'Password cannot be more than 20 characters long.' | translate}}
-          </span>
-          <span
-            class="wrap-input__message"
-            *ngIf="firstPassword.errors['passwordValidation'] &&
-                  !(firstPassword.errors['minlength'] ||
-                    firstPassword.errors['required'] ||
-                    firstPassword.errors['maxlength'])"
+            *ngIf="firstPassword.errors['passwordValidation'] ||
+                  firstPassword.errors['minlength'] ||
+                  firstPassword.errors['required'] ||
+                  firstPassword.errors['maxlength']"
           >
             {{('Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z),' +
                 ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
@@ -118,6 +99,7 @@
           class="wrap-input__input"
           [type]="isPassword2Visible ? 'text' : 'password'"
           formControlName="password_2"
+          autocomplete="false"
           required
         >
         <label class="wrap-input__label">{{'Confirm password' | translate}}</label>
@@ -134,28 +116,6 @@
             *ngIf="secondPassword.errors['required']"
           >
             {{'Password field is required.' | translate}}
-          </span>
-          <span
-            class="wrap-input__message"
-            *ngIf="secondPassword.errors['minlength']"
-          >
-            {{'Password must contain at least 8 characters.' | translate}}
-          </span>
-          <span
-            class="wrap-input__message"
-            *ngIf="secondPassword.errors['maxlength']"
-          >
-            {{'Password cannot be more than 20 characters long.' | translate}}
-          </span>
-          <span
-            class="wrap-input__message"
-            *ngIf="secondPassword.errors['passwordValidation'] &&
-                   !(secondPassword.errors['minlength'] ||
-                     secondPassword.errors['required'] ||
-                     secondPassword.errors['maxlength'])"
-          >
-            {{('Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z),' +
-                ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
           </span>
           <span
             class="wrap-input__message"
