--- a/src/app/shared/components/dynamic-input/dynamic-input.component.html
+++ b/src/app/shared/components/dynamic-input/dynamic-input.component.html
@@ -14,6 +14,9 @@
       autocomplete="off"
       required
     >
+    <div class="clear-icon" (click)="onClearInput()">
+      x
+    </div>
     <label class="wrap-input__label" for="">Search</label>
     <div class="wrap-input__icon">
       <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -21,7 +24,7 @@
       </svg>
     </div>
     <!-- <div class="wrap-input__line"></div> -->
-    <ul class="select__list" [ngClass]="{'select__list--open': showDropdown}" #list>
+    <ul class="select__list" [ngClass]="{'select__list--open': showDropdown && filteredOptions.length}" #list>
       <perfect-scrollbar>
         <li
           *ngFor="let item of filteredOptions; let i = index"
