--- a/src/app/popups/two-factor-popup/google/google-step-four/google-step-four.component.html
+++ b/src/app/popups/two-factor-popup/google/google-step-four/google-step-four.component.html
@@ -8,7 +8,7 @@
 <div class="modal__row modal__row--mb32">
   <div class="wrap-input wrap-input--fix230">
     <input class="wrap-input__input" id="login-email" type="text" required="">
-    <label class="wrap-input__label" for="">{{'Authentification code' | translate}}</label>
+    <label class="wrap-input__label">{{'Authentification code' | translate}}</label>
     <div class="wrap-input__line"></div>
     <span class="wrap-input__message">{{'Incorrect code.' | translate}}</span>
   </div>
