--- a/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
+++ b/src/app/auth/final-step-recovery-password/final-step-recovery-password.component.html
@@ -22,6 +22,7 @@
           </span>
         <!--Input error section starts-->
         <ng-container *ngIf="getFirstPassword.touched && getFirstPassword.errors != null">
+          <div class="input-hint-wrapper">
           <span
             class="wrap-input__message wrap-input__message--error"
             *ngIf="getFirstPassword.errors['required']"
@@ -50,6 +51,7 @@
             {{('Password cannot be less than 8 and more than 40 characters long and should contain of letters (a-z),' +
                ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
           </span>
+        </div>
         </ng-container>
         <!--Input error section ends-->
       </div>
@@ -73,6 +75,7 @@
         <!--Input error section starts-->
 
         <ng-container *ngIf="getConfirmPassword.touched && getConfirmPassword.errors != null">
+          <div class="input-hint-wrapper">
           <span
             class="wrap-input__message wrap-input__message--error"
             *ngIf="getConfirmPassword.errors['required']"
@@ -107,6 +110,7 @@
           >
             {{'Passwords you provided do not match' | translate}}
           </span>
+        </div>
         </ng-container>
         <!--Input error section ends-->
       </div>
