--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -69,12 +69,12 @@
         ></span> -->
         <!--Input error section starts-->
         <ng-container *ngIf="firstPassword.touched && firstPassword.errors != null">
-          <span
+          <!-- <span
             class="wrap-input__message"
             *ngIf="firstPassword.errors['required']"
           >
             {{'Password field is required.' | translate}}
-          </span>
+          </span> -->
           <span
             class="wrap-input__message"
             *ngIf="firstPassword.errors['passwordValidation'] ||
@@ -92,8 +92,9 @@
       <!-- <span class="settings__form-notice">{{'for safety, to confirm that you it is you' | translate}} </span> -->
     </div>
     <div class="settings__form-row">
-      <div class="wrap-input wrap-input--fix230"
-           [ngClass]="{'wrap-input--error': !secondPassword.valid && secondPassword.touched && secondPassword.errors != null}"
+      <div
+        class="wrap-input wrap-input--fix230"
+        [ngClass]="{'wrap-input--error': !secondPassword.valid && secondPassword.touched && secondPassword.errors != null}"
       >
         <input
           class="wrap-input__input"
@@ -111,20 +112,19 @@
         ></span> -->
         <!--Input error section starts-->
         <ng-container *ngIf="secondPassword.touched && secondPassword.errors != null">
-          <span
+          <!-- <span
             class="wrap-input__message"
             *ngIf="secondPassword.errors['required']"
           >
             {{'Password field is required.' | translate}}
-          </span>
+          </span> -->
           <span
             class="wrap-input__message"
-            *ngIf="secondPassword.errors['passwordsNotMatch']"
+            *ngIf="secondPassword.errors['passwordsNotMatch'] "
           >
             {{'Passwords you provided do not match' | translate}}
           </span>
         </ng-container>
-
         <!--Input error section ends-->
       </div>
       <!-- <span class="settings__form-notice">{{'for safety, to confirm that you it is you' | translate}} </span> -->
