--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -363,7 +363,7 @@
         <a class="menu__link">
           <span class="menu__link-text">
             <!-- <img class="language__flag" [src]="lang.icon_url" alt="ru"> -->
-            <span class="language__abbr">{{lang.name.toUpperCase()}}</span>
+            <span>{{lang.fullName}}</span>
           </span>
         </a>
         <div class="submenu submenu--language">
