--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -42,6 +42,7 @@
 
   .menu {
     display: flex;
+    align-items: center;
     height: 100%;
     &--header-menu {
       margin-left: 28px;
@@ -61,7 +62,7 @@
       display: flex;
       align-items: center;
 
-      
+
       &--disabled {
         &:hover {
           .submenu {
