--- a/src/app/popups/two-factor-popup/google/google-disable/google-disable.component.html
+++ b/src/app/popups/two-factor-popup/google/google-disable/google-disable.component.html
@@ -1,5 +1,5 @@
 <div class="title modal__title">{{'Two-Factor authentication by google authentificator' | translate}}</div>
-<div class="subtitle modal__subt{{'itle">' | translate}}
+<div class="subtitle modal__subtitle">
   <p>{{'Сonfirm your details' | translate}}</p>
 </div>
 
@@ -16,16 +16,16 @@
       <label class="wrap-input__label">{{'Email' | translate}}</label>
       <div class="wrap-input__line"></div>
       <div *ngIf="form.get('email').touched && form.get('email').errors != null">
-            <span
-              *ngIf="form.get('email').errors['required']"
-              class="wrap-input__message">
-              {{'This field is required.' | translate}}
-            </span>
+        <span
+          *ngIf="form.get('email').errors['required']"
+          class="wrap-input__message">
+          {{'This field is required.' | translate}}
+        </span>
         <span
           *ngIf="form.get('email').invalid && !form.get('email').errors['required']"
           class="wrap-input__message">
-              {{'Please, enter valid email address.' | translate}}
-            </span>
+          {{'Please, enter valid email address.' | translate}}
+        </span>
       </div>
     </div>
   </div>
@@ -41,11 +41,11 @@
       <label class="wrap-input__label">{{'Password' | translate}}</label>
       <div class="wrap-input__line"></div>
       <div *ngIf="form.get('password').touched && form.get('password').errors != null">
-            <span
-              *ngIf="form.get('password').errors['required']"
-              class="wrap-input__message">
-              {{'This field is required.' | translate}}
-            </span>
+        <span
+          *ngIf="form.get('password').errors['required']"
+          class="wrap-input__message">
+          {{'This field is required.' | translate}}
+        </span>
       </div>
     </div>
   </div>
@@ -60,13 +60,13 @@
       <label class="wrap-input__label">{{'Pin code' | translate}}</label>
       <div class="wrap-input__line"></div>
       <div *ngIf="form.get('pincode').touched && form.get('pincode').errors != null">
-            <span
-              *ngIf="form.get('pincode').errors['required']"
-              class="wrap-input__message">
-              {{'This field is required.' | translate}}
-            </span>
+        <span
+          *ngIf="form.get('pincode').errors['required']"
+          class="wrap-input__message">
+          {{'This field is required.' | translate}}
+        </span>
       </div>
-      <span style="display: inline-block; margin-top: 4px;">{{'Check pin-code in your email' | translate}}</span>
+      <!-- <span style="display: inline-block; margin-top: 4px;">{{'Check pin-code in your email' | translate}}</span> -->
     </div>
   </div>
 
