--- a/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders-history/embedded-orders-history.component.html
@@ -108,7 +108,7 @@
   </tbody>
 
 </table>
-<div class="row" style="margin: 0 16px;">
+<div class="row" style="margin: 0 16px;" *ngIf="historyOrders && historyOrders.length > 7">
   <ul class="paginator" style="margin-left: auto;">
     <!--<li class="paginator__item">-->
       <!--<a class="paginator__link paginator__link&#45;&#45;arr" href="#">-->
