show old verification popup

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,9 @@
       </div>
 
       <div *ngIf="isIdentityPopupOpen">
-        <app-identity-popup></app-identity-popup>
+        <app-identity-popup
+        [showPopup]="isIdentityPopupOpen"
+        ></app-identity-popup>
       </div>
 
       <div *ngIf="isLoginPopupOpen">
