--- a/src/app/popups/identity-popup/identity-popup.component.html
+++ b/src/app/popups/identity-popup/identity-popup.component.html
@@ -1,6 +1,6 @@
-<div class="overlay--modal">
+<div class="overlay--modal" *ngIf="showPopup" [@overlayAnimation]="showPopup ? 'show' : 'hide'">
 
-    <div class="modal">
+    <div class="modal" [@modalAnimation]="showPopup ? 'show' : 'hide' ">
       <div class="modal__controls modal__controls--top">
         <a class="modal__button modal__button--close" (click)="closeMe()">
           <span>close</span>
