--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -22,12 +22,12 @@
         ></span>
         <!--Input error section starts-->
         <ng-container *ngIf="currentPassword.touched && currentPassword.errors != null">
-          <span
+          <!-- <span
             class="wrap-input__message"
             *ngIf="currentPassword.errors['required']"
           >
             {{'Password field is required.' | translate}}
-          </span>
+          </span> -->
           <span
             class="wrap-input__message"
             *ngIf="currentPassword.errors['wrong_password']"
