--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -4,8 +4,8 @@
   <form class="settings-form" [formGroup]="form" (ngSubmit)="onSubmit()">
     <div class="settings__form-row">
       <div class="wrap-input wrap-input--fix230"
-           [ngClass]="{'wrap-input--error': !currentPassword.valid && currentPassword.touched && currentPassword.errors != null}"
       >
+      <!-- [ngClass]="{'wrap-input--error': !currentPassword.valid && currentPassword.touched && currentPassword.errors != null}" -->
         <input
           class="wrap-input__input"
           [type]="isPasswordCurrVisible ? 'text' : 'password'"
@@ -94,7 +94,11 @@
     <div class="settings__form-row">
       <div
         class="wrap-input wrap-input--fix230"
-        [ngClass]="{'wrap-input--error': !secondPassword.valid && secondPassword.touched && secondPassword.errors != null}"
+        [ngClass]="{
+          'wrap-input--error': !secondPassword.valid &&
+                                secondPassword.touched &&
+                                secondPassword.errors != null &&
+                                secondPassword.errors['passwordsNotMatch']}"
       >
         <input
           class="wrap-input__input"
