--- a/src/app/funds/balance/refill-money/refill-money.component.html
+++ b/src/app/funds/balance/refill-money/refill-money.component.html
@@ -1,6 +1,6 @@
 <!--<div class="overlay&#45;&#45;modal" [ngClass]="{ 'modal&#45;&#45;open': showPopup}" *ngIf="showPopup">-->
   <!--<div class="modal">-->
-<div class="overlay--modal" *ngIf="showPopup" [@overlayAnimation]="showPopup ? 'show' : 'hide'">
+<div class="overlay--modal" *ngIf="showPopup" [@overlayAnimation]="showPopup ? 'show' : 'hide'" appAddClass="no-scroll" to="body">
   <div class="modal" [@modalAnimation]="showPopup ? 'show' : 'hide' ">
     <!-- btn modal close -->
     <div class="modal__controls modal__controls--top">
